--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -20,9 +21,11 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/express-session": "^1.17.8",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.4",
     "typescript": "^5.2.2"
   }
