--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/express-session": "^1.17.8",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.4",
     "typescript": "^5.2.2"
   }
